fix name to correct font, fix alignment of noto fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,7 @@ table {
 .not-sindhi-arabic {
   font-family: 'Noto Nastaliq Urdu', serif;
   direction: rtl;
+  text-align: right;
 }
 
 h1 {
